--- a/fe/inforeg/inforeg2/inforeg2.css
+++ b/fe/inforeg/inforeg2/inforeg2.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Pretendard', sans-serif;
   margin: 0;
   padding: 0;
   background: #fff;
