--- a/fe/inforeg/inforeg3/inforeg3.css
+++ b/fe/inforeg/inforeg3/inforeg3.css
@@ -65,12 +65,17 @@ textarea {
   justify-content: space-between;
 }
 
+
 button {
+  width: auto;
+  height: 50px;
+  margin-top: 2rem;
   padding: 10px 20px;
+  background: linear-gradient(90deg, #ff3f39, #f15774);
+  color: #fff;
   border: none;
   border-radius: 8px;
-  background: #ef4444;
-  color: #fff;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 500;
   cursor: pointer;
 }
